Made possible to extend simple functions, which are not part of the classy system

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 
 <html>
     <head>
-        <title>ZippyClasses</title>
+        <title>ZippyClass</title>
     </head>
 
     <body>
-        <script type="text/javascript" src="dist/Class.all.js"></script>
+        <script type="text/javascript" src="dist/ZippyClass.js"></script>
     </body>
 </html>
